Fix image alignment in blog posts to left-align instead of center
- Add explicit left-alignment (margin-left: 0) to base img rule
- Override theme's centering behavior for article images
- Allow images to break out of paragraph max-width constraint

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -105,5 +105,22 @@ pre { overflow: auto; padding: 0.75rem; }
 img {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+/* Blog post images - left-aligned */
+article img,
+article p img {
+  display: block;
+  margin-left: 0;
+  margin-right: auto;
+  max-width: 100%;
+}
+
+/* Allow images to break out of paragraph max-width constraint */
+article p:has(img) {
+  max-width: none;
 }
 
